@@ -38,6 +38,7 @@ DIST patch-2.6.37.6.bz2 177627 RMD160 a7e15bb0da60e763a20b3d73ec516d3e229b9626 S
 DIST patch-2.6.38.8.bz2 186457 RMD160 cdac809f383e251197e56ea724bee7c0463aeaa9 SHA1 5fdbab04b6394291816c83d845c3c13762926169 SHA256 9fef9c3ce27e88962367e1bfea3f28844eadf229b56737925921b09b01024dc7
 DIST patch-2.6.39.4.bz2 117313 RMD160 d0a774e23f9da13a501e26d4a7909a4774a2cfb2 SHA1 b89d84d28e0993d32e8b74b18590d2e5992d7942 SHA256 132ba590e92d5c9a1bb0dc0885795a095d48e7db2552f1c9e3c26ce946a70a40
 DIST patch-3.0.4.bz2 96120 RMD160 d7e99a2258a53adaf2ea7b75b92783093dddacf3 SHA1 7946f47608c8fdcb808cd63bf4741d085a8ee40d SHA256 96fcf18ca99ddd760069d03d9e7d61ff3e25b708d9cde42b82b77d4f61f86fb4
+DIST patch-3.0.7.bz2 192449 RMD160 4b67408a77db81cc6c0637d7b5218f6f5fc74953 SHA1 2034432d7c42a088da90cb644e087bf5ca3bec41 SHA256 5f2999c6c6e1d59a6b33e9ef561f43ba4f21790ca72d930d89e2eabcc69f6fd6
 EBUILD calculate-sources-2.6.32.40.ebuild 749 RMD160 427a3669340a36d19516e4a5eedae61d5f741781 SHA1 42179d3e424a3a515ea43c18b9712fa3e837af7a SHA256 907aa69a4220bf860afe597717a80c694a60e7ae7ea014b7686f0cdf47c88f9b
 EBUILD calculate-sources-2.6.35.9.ebuild 1326 RMD160 86da1c1ce9cbd550dfbea00bd76492ccf7d3f602 SHA1 7c520a1238574ff7bcd642e8104d7ae0b51d9c48 SHA256 5f4f5d5993bef610b84cd3f6e69aabc5a90a5e9dfb1a88c650c25eb3d268c9ac
 EBUILD calculate-sources-2.6.36.4.ebuild 1325 RMD160 ca84789928429048f21834dc50b31cd921bfef72 SHA1 fae947a05ee0e179167a19eec2597475ad4aaff7 SHA256 261e22b1f6000039b006e00eca83a524d4614a6cfb329b35cfa09180cbb086c6
@@ -48,5 +49,6 @@ EBUILD calculate-sources-2.6.39.4.ebuild 744 RMD160 4d0334c6dd67a0a89aabb809239e
 EBUILD calculate-sources-3.0.4-r1.ebuild 780 RMD160 ed57d18c20396014b8dfed9387403fd6a087e213 SHA1 f02ea4abc04dc0d00ec6defbf21ada08fc365cd7 SHA256 c34d92ae87a0d837d6e2450cc1fb8b5063292e7186305bbbe9ec81f841dd5bee
 EBUILD calculate-sources-3.0.4-r2.ebuild 1100 RMD160 18c12ef1c4c94074d41731a1281a4c3241222dbc SHA1 c880535862cc708ba1e470d316e6932295f140ec SHA256 1ad3eb8e29a871ab6b6f2355da1e160a12026194adf49aadf5f5475606a3dcab
 EBUILD calculate-sources-3.0.4-r3.ebuild 1115 RMD160 9b9e78d8c826ebed7e607afe8d31331e145551d9 SHA1 33ff57d0a5403880b1737b1859e916520d6f1754 SHA256 22e6ab5f8270098e8f4fd1731664f723f0051f61729943430b35d84c1d94ae56
-MISC ChangeLog 7819 RMD160 c2e3e0abdb2e2c581385123d019915435996f13d SHA1 a33270204391a11a16a469e818714ae2c28ebe81 SHA256 4a2d391d650f80c094cc24fbfc50e7bc9466f44ba8155e47da55fdc9475bd692
+EBUILD calculate-sources-3.0.7.ebuild 1140 RMD160 400d8cded084a331e29abad1ef4d5bc3ab47454e SHA1 88fb06785aa4c14a3de3b329d66a4a28e6341f94 SHA256 e3add623e30f01c9cfd2d1d174a76642bb884fd21bfe9f9c64b28fd6b1652f90
+MISC ChangeLog 7970 RMD160 7162e3d90fdc76bf0b20011b4dc3bd47bf026267 SHA1 4b1c265936a3327bfb5e75a91bc74eb7e55f6ce8 SHA256 ae20cec307b99f67e797983bab708141b5d81287b7f2d194298dbe10163b2c8f
 MISC metadata.xml 602 RMD160 7ee32e8200b5e17bc717c6aac420bd7902692344 SHA1 da2c0d41e14c0038639c9bd8f59a0b094cb9ae49 SHA256 2b222337597cf63fdd23baa8e278b8c62e4ee2e6d65e92dd52253a857e48913d
