@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-3.0.7 (19 Oct 2011)
+
+  19 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-sources-3.0.7.ebuild:
+  Version bump
+
 *calculate-sources-3.0.4-r3 (04 Oct 2011)
 
   04 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
